fix timeline alignment

--- a/public/css/timeline.css
+++ b/public/css/timeline.css
@@ -46,7 +46,7 @@
   
   /* Place the container to the right */
   .right {
-    left: 50%;
+    left: 51%;
   }
   
   /* Add arrows to the left container (pointing right) */
